--- a/Tetris/Tetris.csproj
+++ b/Tetris/Tetris.csproj
@@ -6,7 +6,7 @@
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{6C2585E6-A4BC-48AF-B706-A1BC02E10250}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Tetris</RootNamespace>
     <AssemblyName>Tetris</AssemblyName>
@@ -61,6 +61,7 @@
   <ItemGroup>
     <Compile Include="Brick.cs" />
     <Compile Include="Field.cs" />
+    <Compile Include="Player.cs" />
     <Compile Include="SharpGLForm.cs">
       <SubType>Form</SubType>
     </Compile>
